# vue-playground

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.vitest.json  typed-router.d.ts  vite.config.ts
scripts/analyze/: README.md  aggregate_lighthouse.py  analyze_lighthouse.py  analyze_trace.py  benchmark-config.json  capture-lighthouse.sh  lighthouse-workflow.md  pyproject.toml  pytest.ini  requirements.txt  test_analyze_lighthouse.py  test_analyze_trace.py
scripts/analyze/bench/: __init__.py  compare.py  config.py  formats.py
scripts/analyze/bench/cli/: __init__.py  analyze.py  compare.py
scripts/analyze/bench/lighthouse/: __init__.py  chart.py  extract.py
scripts/analyze/bench/lighthouse/tests/: conftest.py  test_extract.py  test_integration.py
scripts/analyze/bench/tests/: conftest.py  test_cli.py  test_compare.py  test_config.py  test_formats.py
scripts/analyze/bench/trace/: __init__.py  chart.py  extract.py
scripts/analyze/bench/trace/tests/: conftest.py  test_extract.py  test_integration.py
scripts/analyze/inputs/lighthouse/: basic-devtools.json  basic.json  primevue-devtools.json  primevue.json  tanstack-devtools.json  tanstack.json
scripts/analyze/inputs/lighthouse/runs/: basic-1.json  basic-2.json  basic-3.json  basic-4.json  basic-5.json  (+10 more)
scripts/analyze/reports/: basic.json  primevue.json  tanstack.json
scripts/analyze/tests/: conftest.py  test_analyze_trace.py  test_extract_metrics.py  test_json_output.py
(+104 files in other folders)
